--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -1,9 +1,9 @@
 {
   "name": "JATE",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "start": "webpack-dev-server",
     "build": "webpack --mode production",
-    "start": "webpack --watch"
+    "watch": "webpack --watch"
   },
   "author": "2U",
   "license": "UNLICENSED",
@@ -14,7 +14,7 @@
     "@babel/runtime": "^7.15.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.5.1",
     "http-server": "^0.11.1",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
