--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "JATE",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "watch": "webpack --watch"
   },
@@ -19,7 +19,7 @@
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
+    "webpack-dev-server": "^4.13.3",
     "webpack-pwa-manifest": "^4.3.0",
     "workbox-webpack-plugin": "^6.2.4"
   },
