--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start": "node server.js",
+    "start": "npm run build && cd server && node server.js",
     "server": "concurrently \"npm run start:dev\" \"npm run client\"",
     "build": "cd client && npm run build",
     "install": "cd client && npm install",
